@@ -1,7 +1,7 @@
 = Cucumber
 
 The main website is at http://cukes.info/
-The documentation is at http://github.com/aslakhellesoy/cucumber/wikis/home/
+The documentation is at http://wiki.github.com/aslakhellesoy/cucumber/
 
 == Note on Patches/Pull Requests
  
